B/B3_COMPILER/simple-bison-code.output
Terminals unused in grammar

    SBREAK
    SDO
    SSIZEOF
    SCASE
    SSTRUCT
    SELSE
    SSWITCH
    SCONST
    SRETURN
    SVOID
    SCONTINUE
    "&"
    "\\"
    TOKEN_ERROR


State 3 conflicts: 27 reduce/reduce
State 4 conflicts: 25 reduce/reduce
State 5 conflicts: 25 reduce/reduce
State 37 conflicts: 2 shift/reduce
State 90 conflicts: 27 reduce/reduce
State 106 conflicts: 24 reduce/reduce
State 142 conflicts: 2 reduce/reduce
State 144 conflicts: 2 reduce/reduce
State 145 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program decl_statements NEWLINE
    2        | program ARRAY_SIZE_ERROR NEWLINE
    3        | ε

    4 decl_var: type var

    5 type: SINT
    6     | SFLOAT
    7     | SDOUBLE
    8     | SSHORT
    9     | SLONG

   10 var: IDENTIFIER
   11    | var "," var

   12 pos_elem: IDENTIFIER "[" INTEGER "]"
   13         | IDENTIFIER "[" IDENTIFIER "]"

   14 arr_elements: "[" "]"
   15             | "[" integ "]"
   16             | "[" fl "]"
   17             | "[" str "]"

   18 integ: INTEGER
   19      | integ "," integ

   20 fl: FLOAT
   21   | fl "," fl

   22 str: STRING
   23    | str "," str

   24 build_func: func

   25 func: SSCAN "(" scan_params ")"
   26     | SLEN "(" len_params ")"
   27     | SCMP "(" cmp_params ")"
   28     | SPRINT "(" print_params ")"
   29     | IDENTIFIER "(" print_params ")"

   30 scan_params: IDENTIFIER

   31 len_params: arr_elements
   32           | STRING
   33           | IDENTIFIER

   34 cmp_params: STRING
   35           | IDENTIFIER
   36           | cmp_params "," cmp_params

   37 print_params: STRING
   38             | IDENTIFIER
   39             | INTEGER
   40             | FLOAT
   41             | func
   42             | pos_elem
   43             | print_params "," print_params

   44 decl_func: name_func decl_statement

   45 name_func: SFUNC
   46          | name_func IDENTIFIER params NEWLINE

   47 params: "(" ")"
   48       | "(" type_params ")"

   49 type_params: type IDENTIFIER
   50            | type_params "," type_params

   51 sign: INTEGER
   52     | FLOAT
   53     | "+" sign
   54     | "-" sign

   55 arithm_expr: sign
   56            | IDENTIFIER
   57            | arithm_expr "+" arithm_expr
   58            | arithm_expr "-" arithm_expr
   59            | arithm_expr "*" arithm_expr
   60            | arithm_expr "/" arithm_expr
   61            | arithm_expr "%" arithm_expr

   62 number: INTEGER
   63       | FLOAT
   64       | pos_elem

   65 assign: var "=" val
   66       | var "=" cmp_expr
   67       | var "=" arithm_expr
   68       | var "=" merge_arr
   69       | oper_eq

   70 oper_eq: var "++"
   71        | var "--"
   72        | "++" var
   73        | "--" var
   74        | var "+=" number
   75        | var "-=" number
   76        | var "*=" number
   77        | var "/=" number

   78 val: number
   79    | IDENTIFIER
   80    | STRING
   81    | arr_elements
   82    | val "," val

   83 cmp_expr: INTEGER
   84         | FLOAT
   85         | IDENTIFIER
   86         | cmp_expr ">" cmp_expr
   87         | cmp_expr "<" cmp_expr
   88         | cmp_expr "<=" cmp_expr
   89         | cmp_expr ">=" cmp_expr
   90         | cmp_expr "==" cmp_expr
   91         | cmp_expr "!=" cmp_expr
   92         | cmp_expr "||" cmp_expr
   93         | cmp_expr "&&" cmp_expr
   94         | "!" cmp_expr

   95 merge_arr: arr_elements "+" arr_elements

   96 decl_statements: decl_statement
   97                | decl_statements decl_statement

   98 decl_statement: if_statement
   99               | while_statement
  100               | for_statement
  101               | decl_var ";"
  102               | build_func ";"
  103               | decl_func
  104               | assign ";"
  105               | arithm_expr
  106               | cmp_expr
  107               | merge_arr
  108               | block_statement
  109               | NEWLINE

  110 if_statement: SIF condition decl_statement

  111 condition: cmp_expr
  112          | "(" condition ")"

  113 block_statement: "{" decl_statements "}"

  114 while_statement: SWHILE condition decl_statement

  115 for_statement: SFOR "(" assign ";" cmp_expr ";" oper_eq ")" decl_statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <sval> (258) 10 12 13 29 30 33 35 38 46 49 56 79 85
    STRING <sval> (259) 22 32 34 37 80
    INTEGER <ival> (260) 12 18 39 51 62 83
    FLOAT <fval> (261) 20 40 52 63 84
    SBREAK <sval> (262)
    SDO <sval> (263)
    SIF <sval> (264) 110
    SSIZEOF <sval> (265)
    SCASE <sval> (266)
    SDOUBLE <sval> (267) 7
    SINT <sval> (268) 5
    SSTRUCT <sval> (269)
    SFUNC <sval> (270) 45
    SELSE <sval> (271)
    SLONG <sval> (272) 9
    SSWITCH <sval> (273)
    SCONST <sval> (274)
    SFLOAT <sval> (275) 6
    SRETURN <sval> (276)
    SVOID <sval> (277)
    SCONTINUE <sval> (278)
    SFOR <sval> (279) 115
    SSHORT <sval> (280) 8
    SWHILE <sval> (281) 114
    "+" (282) 53 57 95
    "*=" (283) 76
    "--" (284) 71 73
    "-" (285) 54 58
    "/=" (286) 77
    "<" (287) 87
    "*" (288) 59
    "!" (289) 94
    ">" (290) 86
    "/" (291) 60
    "&&" (292) 93
    "<=" (293) 88
    "%" (294) 61
    "||" (295) 92
    ">=" (296) 89
    "=" (297) 65 66 67 68
    "==" (298) 90
    "&" (299)
    "+=" (300) 74
    "!=" (301) 91
    "-=" (302) 75
    "++" (303) 70 72
    "(" (304) 25 26 27 28 29 47 48 112 115
    ")" (305) 25 26 27 28 29 47 48 112 115
    "[" (306) 12 13 14 15 16 17
    "]" (307) 12 13 14 15 16 17
    "{" (308) 113
    "}" (309) 113
    "," (310) 11 19 21 23 36 43 50 82
    "\\" (311)
    ";" (312) 101 102 104 115
    SSCAN (313) 25
    SPRINT (314) 28
    SLEN (315) 26
    SCMP (316) 27
    NEWLINE (317) 1 2 46 109
    ARRAY_SIZE_ERROR (318) 2
    TOKEN_ERROR (319)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program <sval> (66)
        on left: 1 2 3
        on right: 0 1 2
    decl_var <sval> (67)
        on left: 4
        on right: 101
    type <sval> (68)
        on left: 5 6 7 8 9
        on right: 4 49
    var <sval> (69)
        on left: 10 11
        on right: 4 11 65 66 67 68 70 71 72 73 74 75 76 77
    pos_elem <sval> (70)
        on left: 12 13
        on right: 42 64
    arr_elements <sval> (71)
        on left: 14 15 16 17
        on right: 31 81 95
    integ <sval> (72)
        on left: 18 19
        on right: 15 19
    fl <sval> (73)
        on left: 20 21
        on right: 16 21
    str <sval> (74)
        on left: 22 23
        on right: 17 23
    build_func <sval> (75)
        on left: 24
        on right: 102
    func <sval> (76)
        on left: 25 26 27 28 29
        on right: 24 41
    scan_params <sval> (77)
        on left: 30
        on right: 25
    len_params <sval> (78)
        on left: 31 32 33
        on right: 26
    cmp_params <sval> (79)
        on left: 34 35 36
        on right: 27 36
    print_params <sval> (80)
        on left: 37 38 39 40 41 42 43
        on right: 28 29 43
    decl_func <sval> (81)
        on left: 44
        on right: 103
    name_func <sval> (82)
        on left: 45 46
        on right: 44 46
    params <sval> (83)
        on left: 47 48
        on right: 46
    type_params <sval> (84)
        on left: 49 50
        on right: 48 50
    sign <sval> (85)
        on left: 51 52 53 54
        on right: 53 54 55
    arithm_expr <sval> (86)
        on left: 55 56 57 58 59 60 61
        on right: 57 58 59 60 61 67 105
    number <sval> (87)
        on left: 62 63 64
        on right: 74 75 76 77 78
    assign <sval> (88)
        on left: 65 66 67 68 69
        on right: 104 115
    oper_eq <sval> (89)
        on left: 70 71 72 73 74 75 76 77
        on right: 69 115
    val <sval> (90)
        on left: 78 79 80 81 82
        on right: 65 82
    cmp_expr <sval> (91)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 66 86 87 88 89 90 91 92 93 94 106 111 115
    merge_arr <sval> (92)
        on left: 95
        on right: 68 107
    decl_statements <sval> (93)
        on left: 96 97
        on right: 1 97 113
    decl_statement <sval> (94)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 44 96 97 110 114 115
    if_statement <sval> (95)
        on left: 110
        on right: 98
    condition <sval> (96)
        on left: 111 112
        on right: 110 112 114
    block_statement <sval> (97)
        on left: 113
        on right: 108
    while_statement <sval> (98)
        on left: 114
        on right: 99
    for_statement <sval> (99)
        on left: 115
        on right: 100


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    1 program: program • decl_statements NEWLINE
    2        | program • ARRAY_SIZE_ERROR NEWLINE

    $end              shift, and go to state 2
    IDENTIFIER        shift, and go to state 3
    INTEGER           shift, and go to state 4
    FLOAT             shift, and go to state 5
    SIF               shift, and go to state 6
    SDOUBLE           shift, and go to state 7
    SINT              shift, and go to state 8
    SFUNC             shift, and go to state 9
    SLONG             shift, and go to state 10
    SFLOAT            shift, and go to state 11
    SFOR              shift, and go to state 12
    SSHORT            shift, and go to state 13
    SWHILE            shift, and go to state 14
    "+"               shift, and go to state 15
    "--"              shift, and go to state 16
    "-"               shift, and go to state 17
    "!"               shift, and go to state 18
    "++"              shift, and go to state 19
    "["               shift, and go to state 20
    "{"               shift, and go to state 21
    SSCAN             shift, and go to state 22
    SPRINT            shift, and go to state 23
    SLEN              shift, and go to state 24
    SCMP              shift, and go to state 25
    NEWLINE           shift, and go to state 26
    ARRAY_SIZE_ERROR  shift, and go to state 27

    decl_var         go to state 28
    type             go to state 29
    var              go to state 30
    arr_elements     go to state 31
    build_func       go to state 32
    func             go to state 33
    decl_func        go to state 34
    name_func        go to state 35
    sign             go to state 36
    arithm_expr      go to state 37
    assign           go to state 38
    oper_eq          go to state 39
    cmp_expr         go to state 40
    merge_arr        go to state 41
    decl_statements  go to state 42
    decl_statement   go to state 43
    if_statement     go to state 44
    block_statement  go to state 45
    while_statement  go to state 46
    for_statement    go to state 47


State 2

    0 $accept: program $end •

    $default  accept


State 3

   10 var: IDENTIFIER •
   29 func: IDENTIFIER • "(" print_params ")"
   56 arithm_expr: IDENTIFIER •
   85 cmp_expr: IDENTIFIER •

    "("  shift, and go to state 48

    IDENTIFIER  reduce using rule 56 (arithm_expr)
    IDENTIFIER  [reduce using rule 85 (cmp_expr)]
    INTEGER     reduce using rule 56 (arithm_expr)
    INTEGER     [reduce using rule 85 (cmp_expr)]
    FLOAT       reduce using rule 56 (arithm_expr)
    FLOAT       [reduce using rule 85 (cmp_expr)]
    SIF         reduce using rule 56 (arithm_expr)
    SIF         [reduce using rule 85 (cmp_expr)]
    SDOUBLE     reduce using rule 56 (arithm_expr)
    SDOUBLE     [reduce using rule 85 (cmp_expr)]
    SINT        reduce using rule 56 (arithm_expr)
    SINT        [reduce using rule 85 (cmp_expr)]
    SFUNC       reduce using rule 56 (arithm_expr)
    SFUNC       [reduce using rule 85 (cmp_expr)]
    SLONG       reduce using rule 56 (arithm_expr)
    SLONG       [reduce using rule 85 (cmp_expr)]
    SFLOAT      reduce using rule 56 (arithm_expr)
    SFLOAT      [reduce using rule 85 (cmp_expr)]
    SFOR        reduce using rule 56 (arithm_expr)
    SFOR        [reduce using rule 85 (cmp_expr)]
    SSHORT      reduce using rule 56 (arithm_expr)
    SSHORT      [reduce using rule 85 (cmp_expr)]
    SWHILE      reduce using rule 56 (arithm_expr)
    SWHILE      [reduce using rule 85 (cmp_expr)]
    "+"         reduce using rule 56 (arithm_expr)
    "+"         [reduce using rule 85 (cmp_expr)]
    "*="        reduce using rule 10 (var)
    "--"        reduce using rule 10 (var)
    "--"        [reduce using rule 56 (arithm_expr)]
    "--"        [reduce using rule 85 (cmp_expr)]
    "-"         reduce using rule 56 (arithm_expr)
    "-"         [reduce using rule 85 (cmp_expr)]
    "/="        reduce using rule 10 (var)
    "<"         reduce using rule 85 (cmp_expr)
    "!"         reduce using rule 56 (arithm_expr)
    "!"         [reduce using rule 85 (cmp_expr)]
    ">"         reduce using rule 85 (cmp_expr)
    "&&"        reduce using rule 85 (cmp_expr)
    "<="        reduce using rule 85 (cmp_expr)
    "||"        reduce using rule 85 (cmp_expr)
    ">="        reduce using rule 85 (cmp_expr)
    "="         reduce using rule 10 (var)
    "=="        reduce using rule 85 (cmp_expr)
    "+="        reduce using rule 10 (var)
    "!="        reduce using rule 85 (cmp_expr)
    "-="        reduce using rule 10 (var)
    "++"        reduce using rule 10 (var)
    "++"        [reduce using rule 56 (arithm_expr)]
    "++"        [reduce using rule 85 (cmp_expr)]
    "["         reduce using rule 56 (arithm_expr)
    "["         [reduce using rule 85 (cmp_expr)]
    "{"         reduce using rule 56 (arithm_expr)
    "{"         [reduce using rule 85 (cmp_expr)]
    "}"         reduce using rule 56 (arithm_expr)
    "}"         [reduce using rule 85 (cmp_expr)]
    ","         reduce using rule 10 (var)
    SSCAN       reduce using rule 56 (arithm_expr)
    SSCAN       [reduce using rule 85 (cmp_expr)]
    SPRINT      reduce using rule 56 (arithm_expr)
    SPRINT      [reduce using rule 85 (cmp_expr)]
    SLEN        reduce using rule 56 (arithm_expr)
    SLEN        [reduce using rule 85 (cmp_expr)]
    SCMP        reduce using rule 56 (arithm_expr)
    SCMP        [reduce using rule 85 (cmp_expr)]
    NEWLINE     reduce using rule 56 (arithm_expr)
    NEWLINE     [reduce using rule 85 (cmp_expr)]
    $default    reduce using rule 56 (arithm_expr)


State 4

   51 sign: INTEGER •
   83 cmp_expr: INTEGER •

    IDENTIFIER  reduce using rule 51 (sign)
    IDENTIFIER  [reduce using rule 83 (cmp_expr)]
    INTEGER     reduce using rule 51 (sign)
    INTEGER     [reduce using rule 83 (cmp_expr)]
    FLOAT       reduce using rule 51 (sign)
    FLOAT       [reduce using rule 83 (cmp_expr)]
    SIF         reduce using rule 51 (sign)
    SIF         [reduce using rule 83 (cmp_expr)]
    SDOUBLE     reduce using rule 51 (sign)
    SDOUBLE     [reduce using rule 83 (cmp_expr)]
    SINT        reduce using rule 51 (sign)
    SINT        [reduce using rule 83 (cmp_expr)]
    SFUNC       reduce using rule 51 (sign)
    SFUNC       [reduce using rule 83 (cmp_expr)]
    SLONG       reduce using rule 51 (sign)
    SLONG       [reduce using rule 83 (cmp_expr)]
    SFLOAT      reduce using rule 51 (sign)
    SFLOAT      [reduce using rule 83 (cmp_expr)]
    SFOR        reduce using rule 51 (sign)
    SFOR        [reduce using rule 83 (cmp_expr)]
    SSHORT      reduce using rule 51 (sign)
    SSHORT      [reduce using rule 83 (cmp_expr)]
    SWHILE      reduce using rule 51 (sign)
    SWHILE      [reduce using rule 83 (cmp_expr)]
    "+"         reduce using rule 51 (sign)
    "+"         [reduce using rule 83 (cmp_expr)]
    "--"        reduce using rule 51 (sign)
    "--"        [reduce using rule 83 (cmp_expr)]
    "-"         reduce using rule 51 (sign)
    "-"         [reduce using rule 83 (cmp_expr)]
    "<"         reduce using rule 83 (cmp_expr)
    "!"         reduce using rule 51 (sign)
    "!"         [reduce using rule 83 (cmp_expr)]
    ">"         reduce using rule 83 (cmp_expr)
    "&&"        reduce using rule 83 (cmp_expr)
    "<="        reduce using rule 83 (cmp_expr)
    "||"        reduce using rule 83 (cmp_expr)
    ">="        reduce using rule 83 (cmp_expr)
    "=="        reduce using rule 83 (cmp_expr)
    "!="        reduce using rule 83 (cmp_expr)
    "++"        reduce using rule 51 (sign)
    "++"        [reduce using rule 83 (cmp_expr)]
    "["         reduce using rule 51 (sign)
    "["         [reduce using rule 83 (cmp_expr)]
    "{"         reduce using rule 51 (sign)
    "{"         [reduce using rule 83 (cmp_expr)]
    "}"         reduce using rule 51 (sign)
    "}"         [reduce using rule 83 (cmp_expr)]
    SSCAN       reduce using rule 51 (sign)
    SSCAN       [reduce using rule 83 (cmp_expr)]
    SPRINT      reduce using rule 51 (sign)
    SPRINT      [reduce using rule 83 (cmp_expr)]
    SLEN        reduce using rule 51 (sign)
    SLEN        [reduce using rule 83 (cmp_expr)]
    SCMP        reduce using rule 51 (sign)
    SCMP        [reduce using rule 83 (cmp_expr)]
    NEWLINE     reduce using rule 51 (sign)
    NEWLINE     [reduce using rule 83 (cmp_expr)]
    $default    reduce using rule 51 (sign)


State 5

   52 sign: FLOAT •
   84 cmp_expr: FLOAT •
